--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Exo:wght@400;500;600&family=Hind:wght@300;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Exo:wght@400;500;600;800&display=swap');
+@import 'base/variables';
 @import 'base.scss';
 @import 'header.scss';
 @import 'home.scss';
@@ -7,53 +8,6 @@
 @import 'skills.scss';
 @import 'contact.scss';
 @import 'footer.scss';
-
-/*========== VARIABLES CSS ==========*/
-:root{
-    --header-height: 4.5rem;
-
-    /* COLORS */
-    /* Color moder HSL(hue, saturation, lightness) */
-
-    --first-color: hsl(219, 69%, 56%);
-    --first-color-alt: hsl(219, 69%, 52%);
-    --title-color: hsl(219, 8%, 95%);
-    --text-color: hsl(219, 8%, 75%);
-    --text-color-light: hsl(219, 4%, 55%);
-    --white-color: #fff;
-    --body-color: hsl(219, 4%, 4%);
-    --conteiner-color: hsl(219, 4%, 7%);
-
-    /* Font and typografhy */
-    /* .5rem = 8px | 1rem = 16px... */
-    --body-font: 'Exo', sans-serif;
-    --h1-font-size: 1.5rem;
-    --h2-font-size: 1.25rem;
-    --h3-font-size: 1rem;
-    --normal-font-size: .938rem;
-    --small-font-size: .81rem;
-    --smalller-font-size: .75rem;
-
-    /* Font weight */
-    --font-medium: 500;
-    --font-semi-bold: 600;
-
-    /* z index */
-    --z-tooltip: 10;
-    --z-fixed: 100;
-}
-
-/* Responsive typography */
-@media screen and (min-width: 767px){
-    :root{
-        --h1-font-size: 2.45rem;
-        --h2-font-size: 1.5rem;
-        --h3-font-size: 1.25rem;
-        --normal-font-size: 1rem;
-        --small-font-size: .875rem;
-        --smalller-font-size: .813rem;
-    }
-}
 
 
 /*========== BREAKPOINT ==========*/
@@ -79,7 +33,7 @@
     }
 
     .nav{
-        height: calc(var(--header-height) + 1.5rem);
+        height: calc($header-height + 1.5rem);
     }
 
     .nav_toggle,
@@ -130,7 +84,7 @@
         i{
             font-size: 60px;
             padding: .45em;
-            color: var(--first-color);
+            color: $first-color;
         }
     }
 
