--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,25 +12,6 @@
 
 /*========== BREAKPOINT ==========*/
 @media screen and (min-width: 767px){
-    .section{
-        padding: 7rem 0 2rem;
-    }
-
-    .home_data{
-        width: 100%;
-        text-align: left;
-        margin-left: 1em;
-
-        p{
-            width: 70%;
-            margin: .6em 0;
-        }
-    }
-
-    .span_title{
-        margin: 0;
-        text-align: left;
-    }
 
     .nav{
         height: calc($header-height + 1.5rem);
@@ -52,6 +33,23 @@
         text-transform: initial;
     }
 
+    /* HOME */
+    .home{
+        height: 100vh;
+    }
+
+    .home_data{
+        width: 60%;
+        bottom: 10em;
+    }
+
+    .home_cards{
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+        gap: 20px;
+        padding-bottom: 0;
+    }
+
     .home_conteiner{
         height: 65vh;
         grid-template-columns: 60% 40%;
@@ -65,6 +63,15 @@
         border-radius: 50%;
     }
 
+    .mouse_body {
+        visibility: visible;
+    }
+
+    .home_portfolio{
+        padding-top: 120px;
+    }
+
+    /* PORTFOLIO */
     .projects{
         grid-template-columns: repeat(3, 1fr);
     }
@@ -97,5 +104,36 @@
         column-gap: 2em;
         margin-inline: 1.8em;
     }
+
+     /* CONTACT */
+     .main_form{
+        flex-direction: row-reverse;
+        padding-block: 6em 5em;
+    }
+
+    .mail-img{
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        height: 100%;
+        
+        .mail-svg{
+            height: 80%;
+            width: 85%;
+        }
+    }
+
+    .form{
+        width: 75%;
+        margin: 0;
+    }
+    
 }
 
+@media screen and (min-width: 1080px){
+    .home_img{
+        width: 380px;
+    }
+
+   
+}
