--- a/css/style.css
+++ b/css/style.css
@@ -679,31 +679,35 @@ header {
 .about {
   width: 100vw;
   padding-top: 7rem;
-  text-align: center;
+  min-height: 100vh;
 }
 
-.aboutme {
-  padding: 2rem;
-  display: flex;
-  flex-direction: column;
-  row-gap: 2em;
-  justify-content: center;
+.about h1 {
+  width: 100%;
+  font-size: 2.125rem;
+  padding-top: 10px;
+  line-height: 2.25rem;
 }
 
-.me {
-  line-height: 40px;
-  padding-inline: 2rem;
+.about_container {
+  padding-block: 1em 2em;
 }
-.me:hover {
-  transform: scale(1.2, 1.2);
+
+.carousel {
+  padding-block: 1em 3em;
 }
-.me p {
-  padding: 1.5em;
-  color: #fff;
+
+.carousel-item {
+  filter: grayscale(1);
 }
-.me i {
-  font-size: 2em;
-  color: hsl(219deg, 69%, 56%);
+.carousel-item:hover {
+  filter: grayscale(0);
+  transition-property: filter;
+  transition: 200ms all ease-in;
+}
+
+.carousel-indicators [data-bs-target] {
+  background-color: hsl(219deg, 4%, 7%);
 }
 
 /*========== VARIABLES CSS ==========*/
@@ -1131,14 +1135,22 @@ footer {
     color: hsl(219deg, 69%, 56%);
   }
 
-  .about {
-    height: 90vh;
+  /* ABOUT ME */
+  .carousel {
+    width: 450px;
+    height: 670px;
+    margin: 0 auto;
   }
 
-  .aboutme {
-    flex-direction: row;
-    column-gap: 2em;
-    margin-inline: 1.8em;
+  .about_container {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    gap: 1em;
+    padding-block: 2em 3em;
+  }
+  .about_container p {
+    width: 40%;
   }
 
   /* CONTACT */
