--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -16,7 +16,7 @@
 .home_data{
     width: 100%;
     position: absolute;
-    bottom: 1em;
+    bottom: 0;
     z-index: 2;
     p{
         width: 80%;
@@ -120,7 +120,7 @@
 
     .shape_small{
         right: -3rem;
-        bottom: 15rem;
+        bottom: 14rem;
         z-index: -1;
     }
 }
